--- a/src/content/posts/translations/alexandrian-how-to-remix-adventure.mdx
+++ b/src/content/posts/translations/alexandrian-how-to-remix-adventure.mdx
@@ -96,11 +96,11 @@ translator: Станислав "Drakzar" Иванов
 
 Используя наш пример серийного нанимателя, наша оригинальная структура выглядит так:
 
-![](images/20171-072422_0748_1.png)
+images/20171-072422_0748_1.png
 
 Когда же вы делаем так, что наниматель говорит им все с самого начала, структура становится:
 
-![](images/28b99-072422_0748_2.png)
+images/28b99-072422_0748_2.png
 
 Ни одна из этих структур по базе не лучше другой, но нелинейный дизайн дает нам гораздо больше гибкости. Например, мы можем наполнить каждый из узлов X, Y и Z информацией о других двух узлах, что облегчит набег или исследование.
 
@@ -112,11 +112,11 @@ translator: Станислав "Drakzar" Иванов
 
 Вы, конечно же, можете сделать тоже самое для детективов. Вместо линейной структуры вроде этой:
 
-![](images/c97d9-072422_0748_3.png)
+images/c97d9-072422_0748_3.png
 
 Вместо структуры, где начальный узел включает три улики, указывающие на узел X, где есть три улики, указывающие на узел Y, ну и так далее, вы можете создать другую, где улики расходятся в нескольких направлениях:
 
-![](images/2ed79-072422_0748_4.png)
+images/2ed79-072422_0748_4.png
 
 И вот базовый узел, содержащий улики, указывающий на узлы X, Y и Z, а затем каждый из них имеет улики, направляющие на каждый из двух других. И как мы уже заметили, нам часто нужно добавлять улики в опубликованные детективные сценарии, чтобы они стали более крепкими, зачастую будет очень просто добавить их в нелинейном порядке.
 
@@ -126,7 +126,7 @@ translator: Станислав "Drakzar" Иванов
 
 · Посмотреть на них логически с перспективы игрового мира и
 
-· Подумать о том, как информация может/должна попасть к персонажам (в форме улик)
+· Подумать о том, как информация может или должна попасть к персонажам (в форме улик)
 
 чтобы быстро воссоздать связующую материю между ними в соответствие с принципами дизайна на основе узлов.
 
