--- a/src/content/posts/translations/alexandrian-5e-improved-rest.mdx
+++ b/src/content/posts/translations/alexandrian-5e-improved-rest.mdx
@@ -10,7 +10,7 @@ tags:
   - Короткий отдых
   - Длинный отдых
 author: Justin Alexander
-translator: Stanislav Ivanov
+translator: Станислав "Drakzar" Иванов
 ---
 
 Текст Justin Alexander от 07 января 2022 года
