--- a/src/content/posts/translations/alexandrian-thinking-wilderness-travel.mdx
+++ b/src/content/posts/translations/alexandrian-thinking-wilderness-travel.mdx
@@ -29,6 +29,8 @@ translator: Станислав "Drakzar" Иванов
 
 И подобная линия размышлений – «Что-то должно было случиться по дороге в Маэрнат…» - зачастую приводит к одной из разновидностей Закона Ваарсувиуса о Случайных Встречах на Дороге:
 
+![Размышления о путешествиях по диким землям. Часть1, изображение №1](https://cyborgsandmages.com/images/alexandrian-thinking-wilderness-travel-1-1.jpg)
+
 Конечно, это все еще слегка неудовлетворительно. Вы можете увидеть это в воплощении самого этого «закона»: вместо того, чтобы случайная встреча на дороге стала отличной частью вашей игры, она ощущается как обязательство.
 
 (Я также немного поворчу на эту тему, чтобы вам стало ясно, что если вы [правильно используете случайные встречи](https://vk.com/away.php?to=https%3A%2F%2Fthealexandrian.net%2Fwordpress%2F7897%2Froleplaying-games%2Fbreathing-life-into-the-wandering-monster), то они должны быть не только не нудными, но и не тратящими зря время, однако это отдельная тема для разговора)
@@ -42,6 +44,8 @@ translator: Станислав "Drakzar" Иванов
 Я написал [целую серию статей по работе с гексокраулами](https://vk.com/away.php?to=https%3A%2F%2Fthealexandrian.net%2Fwordpress%2F17308%2Froleplaying-games%2Fhexcrawl), но основная идея состоит в том, что вы рисуете карту диких земель, разделенную на гексы, привязывайте к каждому из шестиугольнику интересный контент, а затем используете его, когда персонажи входят в этот гекс. Структура такого путешествия в основе своей создана для поддержания _исследования_, так что если вы готовите просто дорогу из пункта А в пункт Б, то это _не_ подходящая вам структура.
 
 Чтобы продемонстрировать почему, взгляните на эту гексокарту из _[Wilderlands of High Fantasy](https://vk.com/away.php?to=https%3A%2F%2Fwww.drivethrurpg.com%2Fproduct%2F238024%2FWilderlands-of-High-Fantasy-Revised-Guidebook%3Faffiliate_id%3D81207)_ и представьте, что ваши персонажи хотят отправиться в путь из Уорвика в Форкасл:
+
+![Размышления о путешествиях по диким землям. Часть 1, изображение №2](https://cyborgsandmages.com/images/alexandrian-thinking-wilderness-travel-1-2.jpg)
 
 Чтобы подготовить этот кусок карты как правильный гексокраул, вам нужно будет прописать каждый гекс на карте. Если вы ограничите себя лишь главным полуостровом отраженных на карте земель, это все равно более сорока гексов контента. Но в дороге из Уорвика в Форкасл ваши персонажи встретятся лишь с малой толикой вашей подготовки. Другими словами, вы создадите _гораздо больше_ контента, чем вообще будет использовано.
 
@@ -84,6 +88,8 @@ translator: Станислав "Drakzar" Иванов
 Чтобы это был **выбор**, а не **подсчет**, то вам следует убедиться, что маршруты отличаются хотя бы по двум несравнимым характеристикам.
 
 Например, представим путешествие из Уотердипа в Невервинтер.
+
+![Размышления о путешествиях по диким землям. Часть 1, изображение №3](https://cyborgsandmages.com/images/alexandrian-thinking-wilderness-travel-1-3.jpg)
 
 Вы смотрите на карту и говорите: «Вы можете отправиться по Высокой Дороге или же по морю».
 
