--- a/src/content/posts/translations/alexandrian-ask10.mdx
+++ b/src/content/posts/translations/alexandrian-ask10.mdx
@@ -7,7 +7,7 @@ tags:
   - перевод
   - Советы Мастеру
 author: Justin Alexander
-translator: Stanislav Ivanov
+translator: Станислав "Drakzar" Иванов
 cover: ~assets/covers/ask-alexandrian.jpg
 ---
 Текст  от 29 декабря 2022 года
