--- a/src/content/posts/translations/alexandrian-dont-15.mdx
+++ b/src/content/posts/translations/alexandrian-dont-15.mdx
@@ -1,16 +1,16 @@
 ---
-title: "Список «Нет» для ДМа #15: Заблуждение водящего по рельсам"
+title: "Список «Нет» для ДМа № 15: Заблуждение водящего по рельсам"
 description: "Что не стоит делать мастеру, который водит по рельсам - перевод статьи Александриана #alexandrian #railroading #gmtips"
 date: 2023-09-17
 tags:
   - Alexandrian
   - translate
   - перевод
-  - Список "Нет"
+  - Список Нет
   - Советы Мастеру
 author: Justin Alexander
 translator: Станислав "Drakzar" Иванов
-cover: ~assets/covers/alexandrian-dont15.jpg
+cover: ~assets/covers/alexandrian-dont-15.jpg
 ---
 Текст Justin Alexander от 26 марта 2023 года
 
