--- a/src/content/posts/translations/alexandrian-random-gm-tip-what-are-we-doing.mdx
+++ b/src/content/posts/translations/alexandrian-random-gm-tip-what-are-we-doing.mdx
@@ -1,5 +1,5 @@
 ---
-title: "лучайный совет для Мастера: Так что же мы там делаем?"
+title: "Случайный совет для Мастера: Так что же мы там делаем?"
 date: "2023-09-23 12:00"
 description: "Совет Мастеру от Александриана про то как напомнить игрокам, что они делают #alexandrian #gmtips #translate"
 tags: 
