--- a/src/content/posts/translations/iskusstvo-rulingov-chast-v.mdx
+++ b/src/content/posts/translations/iskusstvo-rulingov-chast-v.mdx
@@ -12,6 +12,7 @@ tags:
 
 Текст [Justin Alexander](https://vk.com/away.php?to=https://thealexandrian.net/about&cc_key=) от 18 ноября 2015 года
 
+![image](https://cyborgsandmages.com/images/iskusstvo-rulingov-5-1.jpg)
 
 Процесс перехода к механике игры – это, в итоге, признание того, что у действия есть возможность различного результата. Говоря проще, мы признаем, что есть шанс на успех и шанс на провал.
 
@@ -53,7 +54,7 @@ tags:
 
 Определяя сложность, я использую еще три дополнительных техники, которые я считаю полезными. Я буду использовать терминологию 3 редакции D&D, так как именно в ней я впервые ясно определил их для себя (Игроки четвертой или пятой редакций могут посчитать эти идеи сбивающими с толку, так как дизайнеры приняли ряд весьма странных решений относительно использования «пассивных» проверок, вроде того, что описание механики не совпадает с ее математикой. Но вам придется с этим смириться, так как я не буду пытаться пробиться через тернии неудачного дизайна механики).
 
-![](images/g4LJVcqCMpw.jpg)
+![image](https://cyborgsandmages.com/images/iskusstvo-rulingov-5-2.jpg)
 
 **Беру 20**: Когда вы «Берете 20» в D&D, результат подсчитывается, как если бы вы выбросили 20 на d20. Другими словами, это наилучший из достижимых персонажем результатов. Он используется в ситуациях вроде того же взлома замков – персонаж свободно может повторять свою задачу до тех пор, пока не преуспеет, так что он может просто «Взять 20» и узнать, успешен он или нет.
 
@@ -71,11 +72,10 @@ tags:
 
 > **Степень мастерства**
 
-![](images/85HVj28e6Ng.jpg)
+![image](https://cyborgsandmages.com/images/iskusstvo-rulingov-5-3.jpg)
 
 > **Распространенные уровни сложности**
-
-![](images/JHom-YOxPZc.jpg)
+![image](https://cyborgsandmages.com/images/iskusstvo-rulingov-5-4.jpg)
 
 **Владение на уровне «Беру 10»**: Спросите себя, как много нужно тренировок, чтобы кто-то смог преуспеть в задаче как в рутинном действии? Найдите этот уровень мастерства в таблице, а затем добавьте 10 для определения уровня сложности проверки.
 
@@ -89,7 +89,7 @@ _Пример: средний человек не может просто взя
 
 Однако не стоит использовать персонажа в качестве аналогии для самого себя. Задавать сложность, взглянув на характеристики предпринимающего действие персонажа, а затем высчитав нужные вам проценты успеха, — это губительная практика. Она может показаться хорошей идеей, так как вы определяете «подходящую» для них сложность, но в конечному итоге она попросту избавляет вас от необходимости в механике, как таковой.
 
-![](images/y6s1jVXZjJo.jpg)
+![image](https://cyborgsandmages.com/images/iskusstvo-rulingov-5-5.jpg)
 
 Некоторые системы, вроде D&D или _[Numenera](https://vk.com/away.php?to=http%3A%2F%2Frpg.drivethrustuff.com%2Fproduct%2F114133%2FNumenera%3Faffiliate_id%3D81207&cc_key=)_ легко склоняются к подобному анализу. Другие же будут его затруднять. Зачастую это случается с системами на пуле дайсов. Например, система 2d20, которую мы используем для _[Infinity](https://vk.com/away.php?to=http%3A%2F%2Fwww.drivethrurpg.com%2Fproduct%2F159673%2FINFINITY-RPG-FREE-Quickstart%3Faffiliate_id%3D81207&cc_key=)_ [RPG](https://vk.com/away.php?to=http%3A%2F%2Fwww.drivethrurpg.com%2Fproduct%2F159673%2FINFINITY-RPG-FREE-Quickstart%3Faffiliate_id%3D81207&cc_key=) подразумевает наличие базового пула в 2d20, который может быть расширен различными механиками до максимума в 5d20. Требуемое число, с которым сравнивается бросок, определяется навыком персонажа, а сложность задачи сводится к количеству успехов. Неважно, насколько вы владеете каким-либо навыком, у вас нет минимального уровня гарантированного успеха. Точно также здесь нет реального предела на максимальное количество достижимых успехов.
 
