--- a/src/content/posts/translations/iskusstvo-rulingov-chast-x.mdx
+++ b/src/content/posts/translations/iskusstvo-rulingov-chast-x.mdx
@@ -12,6 +12,8 @@ tags:
 
 Текст [Justin Alexander](https://vk.com/away.php?to=https://thealexandrian.net/about&cc_key=) от 17 мая 2016 года
 
+![image](https://cyborgsandmages.com/images/iskusstvo-rulingov-10-1.jpg)
+
 И вот, обсудив общую теорию рулингов с самого начала до конца, я хотел бы перейти к более продвинутым техниками – нескольким советам и трюкам, которым я научился или придумал сам за все эти годы.
 
 И мы начнем с «позиционирования удачи». Как мы вскоре узнаем, это весьма важная идея, основанная на определении момента, где вы бросайте дайс (удачу) во время определения результата действия, и того, что случается перед или после этого броска. Однако прежде, чем мы начнем, нам стоит немного погрузиться в историю этого термина, дабы избавиться от некоторых возможных осложнений.
@@ -69,6 +71,8 @@ _Удача в середине_ означает, что ваша первая
 · Проверьте удачу вторично.
 
 · Опишите результат.
+
+![image](https://cyborgsandmages.com/images/iskusstvo-rulingov-10-2.jpg)
 
 Иногда эта точка принятия решения встроена в механику. Использование Очков Судьбы – это простой и распространенный пример. _Apocalypse World_ имеет ряд «ходов», которые разрешают броском 2d6, у результатов которого есть диапазон провалов и успехов, а между ними есть еще один диапазон, где персонаж игрока должен принять вторичное решение и выбрать между последствиями и/или частичным успехом.
 
