--- a/src/content/posts/translations/iskusstvo-rulingov-chast-xi.mdx
+++ b/src/content/posts/translations/iskusstvo-rulingov-chast-xi.mdx
@@ -13,6 +13,8 @@ tags:
 
 Текст [Justin Alexander](https://vk.com/away.php?to=https://thealexandrian.net/about&cc_key=) от 21 июля 2017 года
 
+![image](https://cyborgsandmages.com/images/iskusstvo-rulingov-11-1.jpg)
+
 В результате устоявшейся традиции, большая часть механического разрешения в ролевых играх принимает форму _разрешения действием_. Однако есть альтернативная тому парадигма, которая может вам пригодиться: _разрешение повествованием_.
 
 Классический пример различий между этими двумя вещами включает в себя персонажа игрока, который пытается найти спрятанные документы в офисе с запертым сейфом. Используя разрешения действия, механика определяет, может он или нет взломать сейф. При повествовательном подходе механика определяет, смог он или нет найти документы (Стоит отметить, что различие необязательно требует разной механики: Любая попытка может свестись, говоря языком механики, к одной и той же проверки Взлома замков. И разница тут будет в том, какие ставки вы задаете для проверки и как вы интерпретируете его результаты).
@@ -40,6 +42,8 @@ tags:
 Во-первых, для тех, кто только познакомился с этим концептом вполне обычно обрамлять механическое разрешение действия таким образом, чтобы желаемый персонажами игроков результат был идентичен для разрешения действием, а затем заявлять, что между этими подходами нет никакой разницы.
 
 Например, вы можете задать сценарий, в котором игрок скажет: «Я хочу прокрасться туда и выхватить у стражника ключи». Действие – красться и хватать ключи; желаемый исход – прокрасться и схватить ключи. Итак, где же разница? Ну, в данном случае ее нет. Обе техники тогда представляют из себя диаграмму Венна.
+
+![image](https://cyborgsandmages.com/images/iskusstvo-rulingov-11-2.jpg)
 
 Во-вторых, и это уже странно, что вполне обычно для тех, кто пытается _объяснить_ идею повествовательного разрешения, заявить, что традиционные механики боя – это его форма. Их аргумент в том, что «умертвить того человека» является желаемым повествовательным исходом, а это значит, что вся механика боя направлена на получение именно повествовательного результата.
 
