--- a/src/content/posts/translations/iskusstvo-rulingov-chast-xii.mdx
+++ b/src/content/posts/translations/iskusstvo-rulingov-chast-xii.mdx
@@ -12,6 +12,8 @@ tags:
 
 Текст [Justin Alexander](https://vk.com/away.php?to=https://thealexandrian.net/about&cc_key=) от 24 июля 2017 года
 
+![image](https://cyborgsandmages.com/images/iskusstvo-rulingov-12-1.jpg)
+
 Настало время обсудить одну весьма спорную тему: Должен ли ДМ говорить игрокам заданную сложность проверки навыка?
 
 (Я серьезно. Сходите на любой НРИ-форум, задайте этот вопрос и наблюдайте за тем, как длинные ножи приходят в действие в девяти случаях из десяти)
@@ -31,6 +33,8 @@ tags:
 Во-вторых, существует немало обстоятельств, при которых игроки могут выяснить уровень сложности (Например, несколько персонажей совершают атаки против фиксированного значения защиты цели). В некоторых случаях подобный опыт может быть наполнен погружением в игровой мир (персонажи постепенно понимают, насколько опытен их противник, прежде чем можно объявить, что он левша). Это также неплохой пример того, что знание уровня сложности далеко не всегда нарушает погружение в игровой мир, и даже поначалу скрытые значения могут быть избавлены от вуали механики спустя некоторое время, просто чтобы ускорить игру. Практично.
 
 **_Игры с тратой ресурсов_**
+
+![image](https://cyborgsandmages.com/images/iskusstvo-rulingov-12-2.jpg)
 
 На протяжении последнего десятилетия или около того мы наблюдаем за распространением НРИ, включающих в себя механики, по которым игроки могут тратить очки из ограниченного пула на проверку навыка. [GUMSHOE](https://vk.com/away.php?to=https%3A%2F%2Fthealexandrian.net%2Fwordpress%2F35587%2Froleplaying-games%2Ftrail-of-cthulhu-cheat-sheet&cc_key=) и [Cypher System](https://vk.com/away.php?to=https%3A%2F%2Fthealexandrian.net%2Fwordpress%2F35046%2Froleplaying-games%2Fnumenera-system-cheat-sheet-final-version&cc_key=) предлагают нам наиболее распространенную форму этой механики, где очки тратятся из пула навыка или характеристики для получения бонуса на проверку. [_Tales from the Loop_](https://vk.com/away.php?to=https%3A%2F%2Fthealexandrian.net%2Fwordpress%2F39087%2Froleplaying-games%2Ftales-from-the-loop-system-cheat-sheet&cc_key=) отражает иной подход, где существует ряд различных ресурсов, которые могут быть потрачены на переброс проваленных проверок.
 
