--- a/src/content/posts/translations/iskusstvo-rulingov-chast-xiv.mdx
+++ b/src/content/posts/translations/iskusstvo-rulingov-chast-xiv.mdx
@@ -13,6 +13,8 @@ tags:
 
 Текст [Justin Alexander](https://vk.com/away.php?to=https://thealexandrian.net/about&cc_key=) от 25 января 2018 года
 
+![image](https://cyborgsandmages.com/images/iskusstvo-rulingov-14-1.jpg)
+
 На удивление просто напортачить с разрешением групповых действий (И немалую роль в этом здесь играет то, что многие игры используют для этого неполноценные механики. Или же вообще не предлагают механики для разрешения групповой заявки).
 
 Основная проблема лежит в искажении вероятных исходов. Классический пример – когда пять персонажей игроков пытаются прокрасться мимо стражника. ДМ смотрит на стандартную механику для подобных заявок, а затем просит каждого сделать проверку Скрытности – и вроде логика на его стороне.
