--- a/src/content/posts/translations/iskusstvo-rulingov-chast-xiii.mdx
+++ b/src/content/posts/translations/iskusstvo-rulingov-chast-xiii.mdx
@@ -12,6 +12,8 @@ tags:
 
 Текст [Justin Alexander](https://vk.com/away.php?to=https://thealexandrian.net/about&cc_key=) от 10 января 2018 года
 
+![image](https://cyborgsandmages.com/images/iskusstvo-rulingov-13-1.jpg)
+
 Тема, в чем-то схожая со скрытыми и открытыми значениями сложности, это известные или неизвестные _ставки_. Другими словами, знают ли игроки, зачем они бросают дайсы.
 
 Конечно, во многих случаях ставки известны: если вы пытаетесь перепрыгнуть расщелину, то бросок определяет, удалось вам или нет. Однако есть проверки, где-то может быть настолько ясной причины: если ДМ просит проверку Внимательности во время путешествия персонажей игроков по джунглям, игроки необязательно знают, для обнаружения ли это засады дикарей, спрятанного сокровища, предательского отрезка пути или же чего-нибудь еще.
