--- a/src/content/posts/translations/alexandrian-hexcrawl-5e-4-navigation.mdx
+++ b/src/content/posts/translations/alexandrian-hexcrawl-5e-4-navigation.mdx
@@ -17,7 +17,7 @@ translator: Станислав "Drakzar" Иванов
 
 Перевод: Станислав Иванов
 
-Исследование гексов в 5E – Часть 4: Навигация, изображение №1
+![image](https://cyborgsandmages.com/images/hexcrawl-5e-4-1.jpg)
 
 В целом экспедиция может двигаться через дикие земли либо по ориентиру, либо по направлению компаса.
 
@@ -35,7 +35,7 @@ translator: Станислав "Drakzar" Иванов
 
 ПОТЕРЯВШИЕСЯ ПЕРСОНАЖИ: персонажи, провалившие проверку навигации, теряются и могут отклониться от своего предполагаемого маршрута, для чего мы делаем бросок 1d10 согласно диаграмме ниже. Когда потерявшиеся персонажи покидают гекс, они могут выйти через ту сторону, что была определена нашим броском.
 
-Исследование гексов в 5E – Часть 4: Навигация, изображение №2
+![image](https://cyborgsandmages.com/images/hexcrawl-5e-4-2.jpg)
 
 Потерявшиеся персонажи остаются потерявшимися. В новом гексе ни их предполагаемое маршрут, ни их отклонение не изменятся.
 
@@ -49,7 +49,7 @@ translator: Станислав "Drakzar" Иванов
 
 Направление компаса: бросьте 1d10 и сверьтесь с диаграммой ниже (синяя стрелка отображает предполагаемый маршрут).
 
-Исследование гексов в 5E – Часть 4: Навигация, изображение №3
+![image](https://cyborgsandmages.com/images/hexcrawl-5e-4-3.jpg)
 
 Использование компаса: компасы предоставляют преимущество для проверок навигации. Вдобавок они автоматически нивелируют отклонения на границах гексов, даже если пользователь не осознает, что потерялся (даже если вы не понимаете, что сошли с курса, компас постоянно ориентирует вас на предполагаемый маршрут).
 
