--- a/src/content/posts/translations/alexandrian-hexcrawl-5e-5-encounters.mdx
+++ b/src/content/posts/translations/alexandrian-hexcrawl-5e-5-encounters.mdx
@@ -16,7 +16,7 @@ translator: Станислав "Drakzar" Иванов
 
 Перевод: Станислав Иванов
 
-Исследование гексов в 5E – Часть 5: Столкновения, изображение №1
+![image](https://cyborgsandmages.com/images/hexcrawl-5e-5-1.jpg)
 
 Чтобы сделать проверку на столкновения, бросайте 1d12 за каждую смену.
 
@@ -44,7 +44,7 @@ translator: Станислав "Drakzar" Иванов
 
 · Бросьте одну проверку на столкновение и затем проверьте, произойдет ли оно в прописанной локации (Вы можете встроить это в таблицу случайных столкновения, то есть 1-10 на таблице d20 может быть для прописанной локации, а 11-20 – это бродячие столкновения. Однако это может усложнить изменение таблицы столкновений или использование иных таблиц с сохранением примерно равной вероятности нахождения локаций).
 
-Исследование гексов в 5E – Часть 5: Столкновения, изображение №2
+![image](https://cyborgsandmages.com/images/hexcrawl-5e-5-2.jpg)
 
 Стоит отметить, что если вы используете некоторые из перечисленных ниже продвинутых правил, что интерпретируют определенные бродячие столкновения как исследовательские, то это в итоге снизит шанс, что столкновение состоится.
 
@@ -82,7 +82,7 @@ translator: Станислав "Drakzar" Иванов
 
 Чтобы случайно определить изначальную реакцию существа на столкновение, бросьте 2d6 по таблице ниже.
 
-Исследование гексов в 5E – Часть 5: Столкновения, изображение №3
+![image](https://cyborgsandmages.com/images/hexcrawl-5e-5-3.jpg)
 
 Очевидно, что бросок не нужен, если вы уже знаете отношение существа. И если первоначальное взаимодействие не привело к вспышке агрессии, далее вы можете использовать проверки Харизмы для определения того, улучшается, ухудшается или никак не изменяется отношение существа.
 
