--- a/src/content/posts/translations/alexandrian-hexcrawl-5e-6-watch.mdx
+++ b/src/content/posts/translations/alexandrian-hexcrawl-5e-6-watch.mdx
@@ -18,7 +18,7 @@ translator: Станислав "Drakzar" Иванов
 
 Перевод: Станислав Иванов
 
-Исследование гексов в 5E – Часть 6: Порядок действий в смену, изображение №1
+![image](https://cyborgsandmages.com/images/hexcrawl-5e-6-1.jpg)
 
 Как мы обсуждали в Части 2, эта система создана быть модульной, включающей множество продвинутых правил и поддерживающих инструментов, которые могут быть по желанию добавлены или отключены в зависимости от вашего личного вкуса и конкретных нужд конкретного гексокроула.
 
