--- a/src/content/posts/translations/alexandrian-hexcrawl-5e-1.mdx
+++ b/src/content/posts/translations/alexandrian-hexcrawl-5e-1.mdx
@@ -17,6 +17,8 @@ translator: Станислав "Drakzar" Иванов
 
 Перевод: Станислав Иванов
 
+![image](https://cyborgsandmages.com/images/hexcrawl-5e-1.jpg)
+
 Исследование гексов (гексокроул) – это игровая структура для проведения сценариев с путешествиями по дикой местности. И хотя изначально он был центральным компонентом опыта от D&D, со временем он угас. К 1989 году в продуктах можно было найти лишь несколько рудиментарных гексовых карт, и ни одна из них не была создана для гексокроула. Именно тогда вторая редакция Advanced Dungeons & Dragons полностью изъяла все соответствующие процедуры из книг правил.
 
 И лишь когда Necromancer Games вернули в печать Wilderlands, а кампания West Marches Бена Роббинса стала популярной, люди начали заново открывать утерянное искусство изучение гексов. В последние годы формат вернулся к процветанию благодаря выходу Kingmaker для Pathfinder и Tomb of Annihilation для пятой редакции D&D.
