--- a/src/content/posts/translations/alexandrian-hexcrawl-5e-3-watch-actions.mdx
+++ b/src/content/posts/translations/alexandrian-hexcrawl-5e-3-watch-actions.mdx
@@ -15,11 +15,11 @@ translator: Станислав "Drakzar" Иванов
   
 Текст Justin Alexander от 28 марта 2021 года
 
-Исследование гексов в 5E – Часть 3: Действия во время смены, изображение №1
+![image](https://cyborgsandmages.com/images/hexcrawl-5e-3-1.jpg)
 
 Персонажи во время смены могут совершать разнообразные действия, чтобы влиять на успех экспедиции или же достигать других целей во время путешествия. Некоторые действия ограничены определенным видами смен или темпом путешествия.
 
-Заметка плейтестера: будет хорошей идеей составить список «постоянных занятий» экспедиции, а не просить всех объявлять свои действия каждую смену. Простой пример - есть следопыт, который занимается навигацией вот уже в течение восьми дней, и скорее всего он продолжит это делать и в следующие четыре часа, так что вам не нужно будет подтверждать это.
+>Заметка плейтестера: будет хорошей идеей составить список «постоянных занятий» экспедиции, а не просить всех объявлять свои действия каждую смену. Простой пример - есть следопыт, который занимается навигацией вот уже в течение восьми дней, и скорее всего он продолжит это делать и в следующие четыре часа, так что вам не нужно будет подтверждать это.
 
 ## Собиратель
 
@@ -99,7 +99,7 @@ translator: Станислав "Drakzar" Иванов
 
 Уровни сложности для следов
 
-Исследование гексов в 5E – Часть 3: Действия во время смены, изображение №2
+![image](https://cyborgsandmages.com/images/hexcrawl-5e-3-2.jpg)
 
 Продвинутое правило – сокрытие своих следов: в качестве действия смены, персонаж может попытаться скрыть следы экспедиции. Это действие скрытности, требующее, чтобы экспедиция двигалась в медленном темпе. Персонаж делает проверку Мудрости (Скрытность) или Мудрости (Выживание), задавая сложность Поиска следов для любого преследователя, пытающегося найти или использовать найденные следы. Проверка получает помеху в очень мягкой земле, но преимущество на твердой. Модификаторы обстоятельства применимы в обычном порядке.
 
