--- a/src/content/posts/translations/alexandrian-how-to-remix-adventure.mdx
+++ b/src/content/posts/translations/alexandrian-how-to-remix-adventure.mdx
@@ -18,6 +18,8 @@ translator: Станислав "Drakzar" Иванов
 
 Текст Justin Alexander от 30 июля 2021 года
 
+![image](https://cyborgsandmages.com/images/how-to-remix-1-1.jpg)
+
 Я уже делился несколькими собранными заново приключениями из числа опубликованных у себя на странице. Туда вошли как отдельные сценарии вроде Eclipse Phase: Ego Hunter, Keep on the Shadowfell и The Tomb of Horrors, так и полноценные кампании по типу Dragon Heist, Descent Into Avernus и Eternal Lies. Меня часто спрашивают, в чем секрет создания подобных ремиксов.
 
 Во-первых, у этого должна быть причина. Приключение, достойное быть пересобранным, уже должно включать нечто изумительное. Причем изумительное настолько, чтобы оправдать усилия, вложенные в донесение этого опыта до игрового стола.
@@ -82,7 +84,7 @@ translator: Станислав "Drakzar" Иванов
 
 Сценарии-детективы: для простого примера, возьмем детективы. Каждый раз, когда приключение хочет, чтобы персонажи раскрыли тайну, первое, что я сделаю, так это подготовлю список откровений и проверю, следует ли он Правилу Трех Улик:
 
-Для любого решения, которое вы хотите, чтобы приняли персонажи, добавьте хотя бы три улики.
+*Для любого решения, которое вы хотите, чтобы приняли персонажи, добавьте хотя бы три улики.*
 
 Если сценарию не хватает улик для одного или более откровений, он хрупок и скорее всего сломается во время игры. Как только вы заметили недостачу, вы, конечно, сможете исправить проблему, просто добавив новые улики.
 
@@ -96,7 +98,11 @@ translator: Станислав "Drakzar" Иванов
 
 Используя наш пример серийного нанимателя, наша оригинальная структура выглядит так:
 
+![image](https://cyborgsandmages.com/images/how-to-remix-1-2.jpg)
+
 Когда же вы делаем так, что наниматель говорит им все с самого начала, структура становится:
+
+![image](https://cyborgsandmages.com/images/how-to-remix-1-3.jpg)
 
 Ни одна из этих структур по базе не лучше другой, но нелинейный дизайн дает нам гораздо больше гибкости. Например, мы можем наполнить каждый из узлов X, Y и Z информацией о других двух узлах, что облегчит набег или исследование.
 
@@ -108,7 +114,11 @@ translator: Станислав "Drakzar" Иванов
 
 Вы, конечно же, можете сделать тоже самое для детективов. Вместо линейной структуры вроде этой:
 
+![image](https://cyborgsandmages.com/images/how-to-remix-1-4.jpg)
+
 Вместо структуры, где начальный узел включает три улики, указывающие на узел X, где есть три улики, указывающие на узел Y, ну и так далее, вы можете создать другую, где улики расходятся в нескольких направлениях:
+
+![image](https://cyborgsandmages.com/images/how-to-remix-1-5.jpg)
 
 И вот базовый узел, содержащий улики, указывающий на узлы X, Y и Z, а затем каждый из них имеет улики, направляющие на каждый из двух других. И как мы уже заметили, нам часто нужно добавлять улики в опубликованные детективные сценарии, чтобы они стали более крепкими, зачастую будет очень просто добавить их в нелинейном порядке.
 
