--- a/src/content/posts/translations/alexandrian-5e-situational-advantage.mdx
+++ b/src/content/posts/translations/alexandrian-5e-situational-advantage.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Непроверенная 5я редакция: Ситуационное преимущество"
+title: "Непроверенная пятая редакция: Ситуационное преимущество"
 description: Перевод статьи Джастина Александера с его вариантами домашних правил по ситуационному преимуществу #alexandrian #dnd5e #advantage #houserules #translate
 date: 2023-09-17
 tags:
