--- a/src/content/posts/translations/alexandrian-index.mdx
+++ b/src/content/posts/translations/alexandrian-index.mdx
@@ -274,10 +274,35 @@ tags:
 
 [Впечатления от OD&D: Боги и жрецы](https://cyborgsandmages.com/posts/translations/reactions-to-odd-gods-clerics-alexandrian-translate)
 
+[Нуменера: Фрактальные персонажи Мастера](https://cyborgsandmages.com/posts/translations/alexandrian-numenera-fractal-characters)
+
+[Лев, ведьма и сюжетная завязка](https://cyborgsandmages.com/posts/translations/alexandrian-how-to-remix-adventure)
+
+[Размышления о путешествиях по диким землям](https://cyborgsandmages.com/posts/translations/alexandrian-thinking-wilderness-travel)
+
+[Размышления о путешествиях по диким землям - Часть 2](https://cyborgsandmages.com/posts/translations/alexandrian-thinking-wilderness-travel-2)
+
+[Рулинги на практике: Проверки восприятия, часть 1](https://cyborgsandmages.com/posts/translations/alexandrian-rulings-practice-perception-1)
+
+[Рулинги на практике: Проверки восприятия, часть 2 - Полотно восприятия](https://cyborgsandmages.com/posts/translations/alexandrian-rulings-practice-perception-2)
+
+[Рулинги на практике: Проверки восприятия — часть 3. Разделенное восприятие](https://cyborgsandmages.com/posts/translations/alexandrian-rulings-practice-perception-3)
+
+[Рулинги на практике: Ловушки](https://cyborgsandmages.com/posts/translations/alexandrian-rulings-practice-traps)
+
+[Рулинги на практике: Ловушки, часть 2](https://cyborgsandmages.com/posts/translations/alexandrian-rulings-practice-traps-2)
+
+[Как собирать приключение заново](https://cyborgsandmages.com/posts/translations/alexandrian-how-to-remix-adventure)
+
+[Как работают «рельсы»](https://cyborgsandmages.com/posts/translations/alexandrian-how-work-railroading)
+
+[Зачахшее исследование? – Невидимый столп пятой редакции](https://cyborgsandmages.com/posts/translations/alexandrian-exploration-invisible-pillar-of-5e)
+
 ## Непроверенная 5e
 
 [Непроверенная 5e – Динамический ответ на спасброски](https://cyborgsandmages.com/posts/translations/alexandrian-dynamic-responses-for-saving-throws)
 
+[Непроверенная пятая редакция: Продвинутый отдых](https://cyborgsandmages.com/posts/translations/alexandrian-5e-improved-rest)
 ---
 
 ## Загрузки
