--- a/src/content/posts/translations/alexandrian-5e-dynamic-responses-for-saving-throws.mdx
+++ b/src/content/posts/translations/alexandrian-5e-dynamic-responses-for-saving-throws.mdx
@@ -1,5 +1,5 @@
 ---
-title: Непроверенная 5e – Динамический ответ на спасброски
+title: Непроверенная пятая редакция – Динамический ответ на спасброски
 date: 2023-09-17
 description: Статья Джастина Александера про добавление динамики и действий персонажа в спасброски в пятой редакции D&D #alexandrian #translate #dnd5e
 tags: 
