--- a/src/content/posts/translations/alexandrian-index.mdx
+++ b/src/content/posts/translations/alexandrian-index.mdx
@@ -144,13 +144,6 @@ tags:
 
 [Тайная жизнь узлов – Часть 5: Естественность дизайна на основе узлов](https://cyborgsandmages.com/posts/translations/alexandrian-secret-life-of-nodes-5)
 
-## Цикл Рулинги на практике
-
-1 Рулинги на практике: Проверки восприятия
-
-2
-
-3
 
 ## Цикл Hexcrawl 5e
 
@@ -175,23 +168,11 @@ tags:
 10
 
 
-## Цикл Случайное миростроение
-
-1
-
-2
-
-3
-
-4
-
-5
-
 ## Цикл Случайный совет Мастеру
 
 Случайный совет для Мастера – Гексы-матрёшки
 
-Случайный совет для Мастера – создание улик
+Случайный совет для Мастера – Создание улик
 
 Случайный совет для Мастера – создание улик (Часть 2)
 
@@ -205,33 +186,33 @@ tags:
 
 ## Цикл Искусство рулингов
 
-1 [Искусство рулингов. Часть I](https://cyborgsandmages.com/posts/translations/iskusstvo-rulingov-chast-i) 
+1 [Искусство рулингов. Часть I](https://cyborgsandmages.com/posts/translations/iskusstvo-rulingov-chast-i) ИЛИ [Art of Rulings - Глава 1: Искусство Суждений](https://cyborgsandmages.com/posts/translations/alexandrian-art-of-rulings-1)
 
-2
+2 [Искусство рулингов. Часть II - Намерение и метод](https://cyborgsandmages.com/posts/translations/iskusstvo-rulingov-chast-ii) ИЛИ [Art of Rulings - Глава 2: Намерение и Способ](https://cyborgsandmages.com/posts/translations/alexandrian-art-of-rulings-2)
 
-3
+3 [Art of Rulings - Глава 3: Круговорот описания и игромеханики](https://cyborgsandmages.com/posts/translations/alexandrian-art-of-rulings-3)
 
-4
+4 [Искусство рулингов. Часть IV: «Да» по умолчанию](https://cyborgsandmages.com/posts/translations/iskusstvo-rulingov-chast-iv)
 
-5
+5 [Искусство рулингов. Часть V: Навык и сложность](https://cyborgsandmages.com/posts/translations/iskusstvo-rulingov-chast-v)
 
-6
+6 [Искусство рулингов. Часть VI: Вымышленный жребий](https://cyborgsandmages.com/posts/translations/iskusstvo-rulingov-chast-vi) ИЛИ [Art of Rulings - Глава 6: Бросая воображаемый жребий](https://cyborgsandmages.com/posts/translations/alexandrian-art-of-rulings-6)
 
-7
+7 [Искусство рулингов. Часть VII: Векторы](https://cyborgsandmages.com/posts/translations/iskusstvo-rulingov-chast-vii) ИЛИ [Art of Rulings - Глава 7: Векторы](https://cyborgsandmages.com/posts/translations/alexandrian-art-of-rulings-7)
 
-8
+8 [Art of Rulings - Глава 8: Продленный бросок](https://cyborgsandmages.com/posts/translations/alexandrian-art-of-rulings-8)
 
-9
+9 [Искусство рулингов. Часть IX: Развязка в повествовании](https://cyborgsandmages.com/posts/translations/iskusstvo-rulingov-chast-ix)
 
-10
+10 [Искусство рулингов. Часть X: Позиционирование удачи](https://cyborgsandmages.com/posts/translations/iskusstvo-rulingov-chast-x)
 
-11 [Искусство рулингов. Часть XI: Разрешение ситуации повествованием или действием](https://cyborgsandmages.com/posts/translations/iskusstvo-rulingov-chast-xi-razreshenie-situaczii-povestvovaniem-ili-dejstviem)
+11 [Искусство рулингов. Часть XI: Разрешение ситуации повествованием или действием](https://cyborgsandmages.com/posts/translations/iskusstvo-rulingov-chast-xi)
 
-12 [Искусство рулингов. Часть XII: Скрытые или открытые значения сложности](https://cyborgsandmages.com/posts/translations/iskusstvo-rulingov-chast-xii-skrytye-ili-otkrytye-znacheniya-slozhnosti)
+12 [Искусство рулингов. Часть XII: Скрытые или открытые значения сложности](https://cyborgsandmages.com/posts/translations/iskusstvo-rulingov-chast-xii)
 
-13 [Искусство рулингов. Часть XIII: Скрытые или открытые ставки](https://cyborgsandmages.com/posts/translations/iskusstvo-rulingov-chast-xiii-skrytye-ili-otkrytye-stavki)
+13 [Искусство рулингов. Часть XIII: Скрытые или открытые ставки](https://cyborgsandmages.com/posts/translations/iskusstvo-rulingov-chast-xiii)
 
-14 [Искусство рулингов. Часть XIV: Групповые действия](https://cyborgsandmages.com/posts/translations/iskusstvo-rulingov-chast-xiv-gruppovye-dejstviya)
+14 [Искусство рулингов. Часть XIV: Групповые действия](https://cyborgsandmages.com/posts/translations/iskusstvo-rulingov-chast-xiv)
 
 ## Цикл Ремикс Авернуса
 1
@@ -248,17 +229,10 @@ tags:
 
 [Спроси Александриана № 10 - Как попрощаться с игроком](https://cyborgsandmages.com/posts/translations/alexandrian-ask10)
 
-## Прочие статьи
 
-[Как готовить модуль, часть 1](https://cyborgsandmages.com/posts/translations/alexandrian-how-to-prepare-module-1)
+## Случайное миростроение
 
-[Как готовить модуль, часть 2](https://cyborgsandmages.com/posts/translations/alexandrian-how-to-prepare-module-2)
-
-Как работают «рельсы»
-
-Последствие подтасовок: Не все броски дайсов являются механикой
-
-Диапазон подготовки
+[Случайное миростроение – Создание дворянских титулов](https://cyborgsandmages.com/posts/translations/alexandrian-random-worldbuilding-creating-noble-titles)
 
 ## Грамотная подготовка
 
@@ -270,8 +244,30 @@ tags:
 
 [Четвертая статья](https://cyborgsandmages.com/posts/translations/alexandrian-preparing-4)
 
+## Список «Нет» для ДМа
+
+[Список «Нет» для ДМа № 15: Заблуждение водящего по рельсам](https://cyborgsandmages.com/posts/translations/alexandrian-dont-15)
+
 ## Прочее
 
+[Как готовить модуль, часть 1](https://cyborgsandmages.com/posts/translations/alexandrian-how-to-prepare-module-1)
+
+[Как готовить модуль, часть 2](https://cyborgsandmages.com/posts/translations/alexandrian-how-to-prepare-module-2)
+
+[Последствие подтасовок: Не все броски дайсов являются механикой](https://cyborgsandmages.com/posts/translations/alexandrian-cons-of-dice-fudging)
+
+[Манифест о рельсоводстве](https://cyborgsandmages.com/posts/translations/alexandrian-railroading-manifesto)
+
+[Манифест вождения по рельсам – Дополнение: Но я хочу играть по рельсам](https://cyborgsandmages.com/posts/translations/alexandrian-railroading-manifesto-addendum)
+
+[Диапазон подготовки](https://cyborgsandmages.com/posts/translations/alexandrian-diapason-preparing)
+
+
+[Как собирать приключение заново](https://cyborgsandmages.com/posts/translations/alexandrian-how-to-remix-adventure)
+
+[Как работают «рельсы»](https://cyborgsandmages.com/posts/translations/alexandrian-how-work-railroading)
+
+[Зачахшее исследование? – Невидимый столп пятой редакции](https://cyborgsandmages.com/posts/translations/alexandrian-exploration-invisible-pillar-of-5e)
 [Впечатления от OD&D: Боги и жрецы](https://cyborgsandmages.com/posts/translations/reactions-to-odd-gods-clerics-alexandrian-translate)
 
 [Нуменера: Фрактальные персонажи Мастера](https://cyborgsandmages.com/posts/translations/alexandrian-numenera-fractal-characters)
@@ -281,6 +277,8 @@ tags:
 [Размышления о путешествиях по диким землям](https://cyborgsandmages.com/posts/translations/alexandrian-thinking-wilderness-travel)
 
 [Размышления о путешествиях по диким землям - Часть 2](https://cyborgsandmages.com/posts/translations/alexandrian-thinking-wilderness-travel-2)
+
+## Рулинги на практике
 
 [Рулинги на практике: Проверки восприятия, часть 1](https://cyborgsandmages.com/posts/translations/alexandrian-rulings-practice-perception-1)
 
@@ -292,17 +290,15 @@ tags:
 
 [Рулинги на практике: Ловушки, часть 2](https://cyborgsandmages.com/posts/translations/alexandrian-rulings-practice-traps-2)
 
-[Как собирать приключение заново](https://cyborgsandmages.com/posts/translations/alexandrian-how-to-remix-adventure)
 
-[Как работают «рельсы»](https://cyborgsandmages.com/posts/translations/alexandrian-how-work-railroading)
-
-[Зачахшее исследование? – Невидимый столп пятой редакции](https://cyborgsandmages.com/posts/translations/alexandrian-exploration-invisible-pillar-of-5e)
-
-## Непроверенная 5e
-
-[Непроверенная 5e – Динамический ответ на спасброски](https://cyborgsandmages.com/posts/translations/alexandrian-dynamic-responses-for-saving-throws)
+## Непроверенная пятая редакция
 
 [Непроверенная пятая редакция: Продвинутый отдых](https://cyborgsandmages.com/posts/translations/alexandrian-5e-improved-rest)
+
+[Непроверенная пятая редакция – Динамический ответ на спасброски](https://cyborgsandmages.com/posts/translations/alexandrian-5e-dynamic-responses-for-saving-throws)
+
+[Непроверенная пятая редакция: Ситуационное преимущество](https://cyborgsandmages.com/posts/translations/alexandrian-5e-situational-advantage)
+
 ---
 
 ## Загрузки
