--- a/src/content/posts/translations/alexandrian-hexcrawl-9.mdx
+++ b/src/content/posts/translations/alexandrian-hexcrawl-9.mdx
@@ -11,7 +11,7 @@ tags:
   - D&D 3.5e
 author: Justin Alexander
 translator: pnprpg.ru
-cover: ~assets/covers/the_alexandrian_splashes.jpg
+cover: ~assets/covers/the_alexandrian_splashes.png
 ---
 
 ![image](https://cyborgsandmages.com/images/hexcrawl-9-1.jpg)
