--- a/src/content/posts/translations/alexandrian-index.mdx
+++ b/src/content/posts/translations/alexandrian-index.mdx
@@ -89,29 +89,29 @@ tags:
 
 ## Цикл «Hexcrawl»
 
-• Ч.1, преамбула
+• [#Теория — Александрийский Hexcrawl, ч.1 - преамбула](https://cyborgsandmages.com/posts/translations/alexandrian-hexcrawl-1)
 
-• Ч.2: про скорость и дистанцию
+• [Ч.2: про скорость и дистанцию](https://cyborgsandmages.com/posts/translations/alexandrian-hexcrawl-2)
 
-• Ч.3: про направление движения
+• [Ч.3: про направление движения](https://cyborgsandmages.com/posts/translations/alexandrian-hexcrawl-3)
 
-• Ч.4: про таблицы событий
+• [Ч.4: про таблицы событий](https://cyborgsandmages.com/posts/translations/alexandrian-hexcrawl-4)
 
-• Ч.5: про взгляд вдаль
+• [Ч.5: про взгляд вдаль](https://cyborgsandmages.com/posts/translations/alexandrian-hexcrawl-5)
 
-• Ч.6: с контрольным списком вахты
+• [Ч.6: с контрольным списком вахты](https://cyborgsandmages.com/posts/translations/alexandrian-hexcrawl-6)
 
-• Ч.7: с учётным листом продвижения героев
+• [Ч.7: с учётным листом продвижения героев](https://cyborgsandmages.com/posts/translations/alexandrian-hexcrawl-7)
 
-• Ч.8: с примерами описаний отдельных гексов
+• [Ч.8: с примерами описаний отдельных гексов](https://cyborgsandmages.com/posts/translations/alexandrian-hexcrawl-8)
 
-• Ч.9: про документирование игровой кампании
+• [Ч.9: про документирование игровой кампании](https://cyborgsandmages.com/posts/translations/alexandrian-hexcrawl-9)
 
-• Ч.10: про наполнение гексов
+• [Ч.10: про наполнение гексов](https://cyborgsandmages.com/posts/translations/alexandrian-hexcrawl-10)
 
-• Ч.11: и снова про наполнение гексов
+• [Ч.11: и снова про наполнение гексов](https://cyborgsandmages.com/posts/translations/alexandrian-hexcrawl-11)
 
-• Ч.12: заключительная, с развёрнутым примером
+• [Ч.12: заключительная, с развёрнутым примером](https://cyborgsandmages.com/posts/translations/alexandrian-hexcrawl-12)
 
 ## Узелки сюжета
 
