--- a/src/content/posts/translations/alexandrian-hexcrawl-4.mdx
+++ b/src/content/posts/translations/alexandrian-hexcrawl-4.mdx
@@ -11,5 +11,5 @@ tags:
   - D&D 3.5e
 author: Justin Alexander
 translator: pnprpg.ru
-cover: ~assets/covers/the_alexandrian_splashes.jpg
+cover: ~assets/covers/the_alexandrian_splashes.png
 ---
